@@ -1,6 +1,7 @@
 plugins {
     alias(libs.plugins.android.library)
     alias(libs.plugins.kotlin.android)
+    alias(libs.plugins.kotlin.kapt)
     jacoco
 }
 
@@ -42,6 +43,10 @@ android {
     }
 }
 
+tasks.withType<Test> {
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
+}
+
 dependencies {
     implementation(project(":domain"))
     implementation(libs.bundles.coroutines)
@@ -52,6 +57,12 @@ dependencies {
     testImplementation(libs.bundles.test.core)
     testImplementation("androidx.paging:paging-testing:3.3.0")
     implementation("androidx.paging:paging-runtime:3.3.6")
-
+    implementation(libs.bundles.hilt)
+    kapt(libs.hilt.android.compiler)
 
 }
+
+kapt{
+    correctErrorTypes = true
+}
+
